The html page will be shown on the home page itself

--- a/genie/SR/templates/index.html
+++ b/genie/SR/templates/index.html
@@ -13,3 +13,7 @@
 <form action="/question/" method="POST"> {% csrf_token %}
     <input type="submit" value="Click here to record your question!">
 </form>
+
+<div class="basic">
+{% include "C:\\Ashwin\\SparkCode\\projects\\CodeWeek\\genie\\SR\\templates\\fig6.html" %}
+</div>
